// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.eventsframework.schemas.entity;

option java_multiple_files = true;
option go_package = "970_ng_commons";

import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_type.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/identifier_ref.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/input_set_ref.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/template_reference.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/infra_definition_ref.proto";

message EntityDetailProtoDTO {
  EntityTypeProtoEnum type = 1;
  oneof entityRef {
    IdentifierRefProtoDTO identifierRef = 2;
    InputSetReferenceProtoDTO inputSetRef = 3;
    TemplateReferenceProtoDTO templateRef = 5;
    InfraDefinitionReferenceProtoDTO infraDefRef = 6;
  }
  string name = 4;
}
